Fixed toggle colors in high contrast mode

--- a/client/src/components/ModelGraphViewerComponent/ModelGraphViewerRelationshipsToggle/ModelGraphViewerRelationshipsToggle.scss
+++ b/client/src/components/ModelGraphViewerComponent/ModelGraphViewerRelationshipsToggle/ModelGraphViewerRelationshipsToggle.scss
@@ -38,6 +38,14 @@
             background: #fff;
           }
         }
+        &.is-checked {
+          button {
+            background-color: $buttonColor;
+            span{
+              background: var(--toggle-knob-active);
+            }
+          }
+        }
       }
     }
   }
