--- a/client/src/theme/theme.scss
+++ b/client/src/theme/theme.scss
@@ -45,6 +45,8 @@ html {
   --highlight-color: #98E3FD;
 
   --dark-fabric-primary: #60aaff;
+
+  --toggle-knob-active: "#fff";
 }
 
 $backgroundColor1: var(--background-color1);
